avances versión móvil

--- a/src/app/components/add-document-solution/add-document-solution.component.html
+++ b/src/app/components/add-document-solution/add-document-solution.component.html
@@ -44,9 +44,9 @@
       </div> -->
 
       <div class="set-12 txt-right ctrls">
-        <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
+        <!-- <button type="button" mat-raised-button color="accent" [disabled]="submitted" (click)="killDialog()">
           <small>Cancelar</small>
-        </button>
+        </button> -->
         <button type="submit" mat-raised-button color="primary" [disabled]="addSolutionFormGroup.invalid || submitted">
           <small>Guardar</small>
         </button>
