--- a/src/app/components/public-document-mobile-subcategory-view/public-document-mobile-subcategory-view.component.html
+++ b/src/app/components/public-document-mobile-subcategory-view/public-document-mobile-subcategory-view.component.html
@@ -69,12 +69,8 @@
   </div>
 
   <div class="set-12 topic-list">
-    <div class="public-document-mobile-topic-list" [category]="subcategory"></div>
+    <div class="public-document-mobile-topic-list" [document]="document" [category]="subcategory"></div>
   </div>
-
-  <!-- <div class="set-12" *ngIf="topics.length != 0">
-    <div class="public-document-mobile-radar-chart" [isSubLayout]="true" [topics]="topics"></div>
-  </div> -->
 
   <div class="set-12">
     <div class="app-footer"></div>
