--- a/src/app/components/testimonial-list/testimonial-list.component.html
+++ b/src/app/components/testimonial-list/testimonial-list.component.html
@@ -14,10 +14,11 @@
   </div>
 
   <div class="set-8">
-    <div class="set 12 head-titles">
+    <span>Testimonios</span>
+    <!-- <div class="set 12 head-titles">
       <span>Testimonios</span>
       <div class="line"></div>
-    </div>
+    </div> -->
   </div>
   <input type="file" #file (change)="onFileSelected($event)" multiple>
 </div>
