--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,11 +5,11 @@
 <!-- mobile -->
 <div class="set-12 page" *ngIf="isDataAvailable" [class.fixdesk]="!isMobile">
   <div class="set-12 mb-page">
-    <div class="set-12">
+    <!-- <div class="set-12">
       <form [formGroup]="searchFormGroup" (submit)="onSearch(searchFormGroup)">
         <input type="text" placeholder="Búscar en Mexicolectivo..." formControlName="search">
       </form>
-    </div>
+    </div> -->
     <p class="set-12">
       Mexicolectivo surge como una plataforma para recoger e intercambiar ideas, soluciones y diagnósticos, entre la
       ciudadanía y la sociedad civil organizada experta para incidir en la agenda pública.
