--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -417,10 +417,10 @@
       border: 1px solid rgba($color: #000000, $alpha: 0.4);
     }
 
-    p {
-      margin-top: 20px;
-      // text-align: justify;
-    }
+    // p {
+    //   margin-top: 20px;
+    //   text-align: justify;
+    // }
   }
 
   .mb-page:nth-child(2) {
@@ -441,7 +441,7 @@
     }
   }
 
-  .mb-page:nth-child(3) {}
+  // .mb-page:nth-child(3) {}
 
   .mb-page:nth-child(4) {
     background: #ffffff;
