--- a/src/app/components/add-document-theme/add-document-theme.component.scss
+++ b/src/app/components/add-document-theme/add-document-theme.component.scss
@@ -152,6 +152,10 @@
     }
   }
 
+  .coverage-name {
+    margin-bottom: 20px;
+  }
+
   .loading {
     mat-spinner {
       position: absolute;
@@ -160,4 +164,9 @@
       transform: translate(-50%, -50%);
     }
   }
+}
+
+:host(.fixmobile) {
+  margin: 0 !important;
+  width: 100%;
 }
