--- a/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.html
+++ b/src/app/components/public-document-mobile-solution-view/public-document-mobile-solution-view.component.html
@@ -41,12 +41,18 @@
     <div class="set-12 txt-center row vote-tools">
       <p>Relevancia ciudadana</p>
       <p><strong>{{solution?.stats?.score || 0}} / 100</strong></p>
-      <button type="button" mat-raised-button color="warn" class="votebtn">
+
+      <button type="button" mat-raised-button color="warn" class="votebtn" (click)="openVoteDialog()"
+        *ngIf="!userVoted">
         <small>Vota</small>
       </button>
+
+      <div class="set-12 vote-count" *ngIf="userVoted">Votos: {{ votes }}</div>
+
       <div class="set-12 ctrls">
-        <button type="button" disabled>
-          <mat-icon>favorite</mat-icon>
+        <button type="button" (click)="addFavorites()">
+          <mat-icon color="primary" *ngIf="!isFavorite">favorite</mat-icon>
+          <mat-icon color="accent" *ngIf="isFavorite">favorite</mat-icon>
         </button>
         <button type="button" disabled>
           <mat-icon>share</mat-icon>
