--- a/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.scss
+++ b/src/app/components/public-document-mobile-topic-list/public-document-mobile-topic-list.component.scss
@@ -48,11 +48,14 @@
 
   .list-head {
     padding: 20px;
+    display: flex;
+    align-items: center;
     background: #171b3b;
     border-bottom: 1px solid rgba($color: #ffffff, $alpha: 0.3);
 
     input {
       width: 100%;
+      height: 40px;
       padding: 10px;
       background: #ffffff;
       border-radius: 5px;
