--- a/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.scss
+++ b/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.scss
@@ -1,25 +1,24 @@
 .circleChart {
-    display: flex;
-    background: #FFFFFF;
-    padding: 20px;
-
+  display: flex;
+  background: #ffffff;
+  padding: 20px;
 }
 
 .textProgressValue {
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 25px;
-    color: #306EFF;
+  font-family: "Noto Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  color: #306eff;
 }
 
 .infoProgressValue {
-    font-family: 'Noto Sans';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
+  font-family: "Noto Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px;
 }
 
-.circleChartInformation{
-    margin: 10px;
+.circleChartInformation {
+  margin: 10px;
 }
