--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.scss
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.scss
@@ -1,27 +1,20 @@
-::ng-deep .mat-tab-header{
-  background: #FFFFFF;
-
+::ng-deep .mat-tab-header {
+  background: #ffffff;
 }
 
 .mat-tab-group ::ng-deep .mat-tab-header .mat-tab-header-pagination {
-    display: none;
-  }
-  ::ng-deep .mat-tab-label {
-   font-size: 16px;
-  }
-
-  ::ng-deep .mat-tab-body{
-  margin-left: 10px;
-  }
-
-.achieve-title{
-font-weight: 500;
-font-size: 16px;
-line-height: 20px;
+  display: none;
+}
+::ng-deep .mat-tab-label {
+  font-size: 16px;
 }
 
+::ng-deep .mat-tab-body {
+  margin-left: 0px;
+}
 
-  
-
-  
-
+.achieve-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
