--- a/src/app/hub/profile-mobile/profile-mobile.component.html
+++ b/src/app/hub/profile-mobile/profile-mobile.component.html
@@ -1,83 +1,65 @@
 <div class="set-12 loading" *ngIf="isDataAvailable">
-    <mat-spinner></mat-spinner>
+  <mat-spinner></mat-spinner>
 </div>
 
-<div class="set-12">
+<div class="set-12 form-profile">
+  <div class="set-12">
+    <h2>Tu perfil</h2>
+  </div>
+  <div class="set-12 avatarhldr">
+    <button class="avatar">
+      <img
+        src="https://cdn-icons-png.flaticon.com/512/147/147144.png"
+        alt="Avatar"
+      />
+      <!-- <span *ngIf="user.avatarImage == null">
+        {{ user.firstname | firstword | firstletter
+        }}{{ user.lastname | firstword | firstletter }}
+      </span> -->
+    </button>
+  </div>
 
-            <div class="set-12">
-                <h2>Tu perfil</h2>
-              
-            </div>
+  <form class="set-12">
+    <div class="set-12">
+      <mat-form-field appearance="outline">
+        <mat-label>Nombre</mat-label>
+        <input type="text" matInput />
+      </mat-form-field>
+    </div>
 
+    <div class="set-12">
+      <mat-form-field appearance="outline">
+        <mat-label>Apellido</mat-label>
+        <input type="text" matInput />
+      </mat-form-field>
+    </div>
 
-            <form class="set-12">
+    <div class="set-12">
+      <mat-form-field appearance="outline">
+        <mat-label>Alias*</mat-label>
+        <input type="text" matInput />
+      </mat-form-field>
+    </div>
 
+    <div class="set-12">
+      <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input type="text" matInput />
+      </mat-form-field>
+    </div>
 
-                <div class="set-12">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Nombre(s)</mat-label>
-                        <input type="text" matInput >
-                    </mat-form-field>
-                </div>
+    <div class="set-12">
+      <mat-form-field appearance="outline">
+        <mat-label>Contraseña</mat-label>
+        <input type="text" matInput />
+      </mat-form-field>
+    </div>
 
-                <div class="set-12">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Apellido(s)</mat-label>
-                        <input type="text" matInput >
-                    </mat-form-field>
-                </div>
-
-                <div class="set-12">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Alias*</mat-label>
-                        <input type="text" matInput >
-                    </mat-form-field>
-                </div>
-
-                <div class="set-12">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Correo electrónico</mat-label>
-                        <input type="text" matInput >
-                    </mat-form-field>
-                </div>
-
-                <div class="set-12">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Teléfono</mat-label>
-                        <input type="text" matInput>
-                    </mat-form-field>
-                </div>
-
-                <div class="set-12">
-                    <h2>Datos de la asociación</h2>
-                    
-                </div>
-
-                <div class="set-12">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Nombre</mat-label>
-                        <input type="text" matInput>
-                    </mat-form-field>
-                </div>
-                <div class="set-12">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Escribe una breve presentación de la asociación a la que perteneces</mat-label>
-                        <input type="text" matInput>
-                    </mat-form-field>
-                </div>
-                <div class="set-12">
-                    <mat-form-field appearance="outline">
-                        <mat-label>Escribe temas que sean de tu interés</mat-label>
-                        <input type="text" matInput >
-                    </mat-form-field>
-                </div>
-
-                <div class="set-12 ctrls">
-                    <button mat-raised-button color="accent" >
-                        <small>Registrate</small>
-                    </button>
-                </div>
-            </form>
-            <footer-mobile></footer-mobile>
-    
+    <div class="set-12 ctrls">
+      <button mat-raised-button color="accent">
+        <small>Editar</small>
+      </button>
+    </div>
+  </form>
+  <footer-mobile></footer-mobile>
 </div>
