update style spider-chart

--- a/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.html
+++ b/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.html
@@ -1,10 +1,12 @@
-<div class="mt-1"> 
+<div class="mt-1">
   <canvas
     id="canvas"
     baseChart
-    [data]="spiderData"
-    [options]="spiderChartOptions"
-    [type]="spiderChartType"
+    class="chart"
+    [data]="radarChartData"
+    [options]="radarChartOptions"
+    [type]="radarChartType"
   >
+    >
   </canvas>
 </div>
