--- a/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
+++ b/src/app/hub/components/circle-chart-mobile/circle-chart-mobile.component.html
@@ -1,10 +1,13 @@
 <div class="circleChart mt-1">
+  
   <div style="position: relative">
     <mat-progress-spinner
+    
       class="custom-spinner"
       [diameter]="150"
-      [strokeWidth]="12"
+      [strokeWidth]="15"
       [value]="progressValue"
+      color="accent" 
     >
       ></mat-progress-spinner
     >
