--- a/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.html
+++ b/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.html
@@ -2,10 +2,12 @@
   <canvas
     id="canvas"
     baseChart
-    class="chart"
-    [data]="radarChartData"
-    [options]="radarChartOptions"
-    [type]="radarChartType"
+    [datasets]="spiderChartData"
+    [labels]="spiderChartLabels"
+    [type]="spiderChartType"
+    (chartHover)="chartHovered($event)"
+    (chartClick)="chartClicked($event)"
+    [legend]="false"
   >
     >
   </canvas>
