--- a/src/app/public-documents/topic/topic.component.html
+++ b/src/app/public-documents/topic/topic.component.html
@@ -111,5 +111,5 @@
 <div class="set-12" *ngIf="isDataAvailable && isMobile">
   <div class="public-document-mobile-topic-view" [document]="document" [topic]="topic" [user]="user"
     [userVoted]="userVoted" [votes]="votes" [allFavorites]="allFavorites" (topicVoted)="getVoteStatus($event)"
-    (addSolution)="openModalSolution(null)"></div>
+    (addSolution)="openModalSolution($event)"></div>
 </div>
