--- a/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.scss
+++ b/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.scss
@@ -8,7 +8,7 @@
   border-radius: 100%;
 
   button {
-    border-radius: 100%;
+    // border-radius: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,16 +21,25 @@
     height: 40px;
     background: #306EFF;
     z-index: 17;
+    border-radius: 100%;
+
+    mat-icon {
+      color: #ffffff;
+    }
   }
 
   button.tool {
-    width: 40px;
+    width: auto;
     height: 40px;
     // background: greenyellow;
     z-index: 14;
     position: absolute;
     top: 10px;
     right: 10px;
+    opacity: 0;
+    transition: all .2s linear;
+    padding: 0 10px;
+    border-radius: 5px;
 
     mat-icon {
       font-size: 14pt;
@@ -55,5 +64,9 @@
     &.fixedpos {
       top: -35px;
     }
+  }
+
+  .fixedpos {
+    opacity: 1 !important;
   }
 }
