--- a/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.html
+++ b/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.html
@@ -6,7 +6,7 @@
   <div class="featured-users-circles"></div>
 </div> -->
 
-<div class="set-12 bars">
+<div class="set-12 bars" *ngIf="layouts.length != 0">
   <div class="set-12 inner-bar" *ngFor="let layout of layouts">
     <div class="grayback">
       <button type="button" class="fav">
@@ -25,4 +25,8 @@
       {{ layout.category.name }}
     </button>
   </div>
+</div>
+
+<div class="set-12 empty-bars" *ngIf="layouts.length == 0">
+  No hay categorías disponibles.
 </div>
