--- a/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.scss
+++ b/src/app/components/public-document-mobile-subcategory-bars/public-document-mobile-subcategory-bars.component.scss
@@ -137,4 +137,11 @@
       font-size: 14pt;
     }
   }
+
+  .empty-bars {
+    color: #71f5ad;
+    text-align: center;
+    font-weight: bold;
+    font-size: 10pt;
+  }
 }
