--- a/src/app/public-documents/components/category-bars/category-bars.component.html
+++ b/src/app/public-documents/components/category-bars/category-bars.component.html
@@ -27,13 +27,13 @@
       <mat-icon>shortcut</mat-icon>
     </button> -->
 
-    <div class="grayback" [style.width]="layout.stats.score + '%'">
+    <div class="grayback" [style.min-width.%]="30" [style.width]="layout.stats.score + '%'">
       <button type="button" class="fav">
         <mat-icon>favorite</mat-icon>
       </button>
     </div>
 
-    <div class="gradbar" [style.min-width.%]="1" [style.max-width]="'calc(100% - 70px)'"
+    <div class="gradbar" [style.min-width.%]="30" [style.max-width]="'calc(100% - 70px)'"
       [style.width.%]="layout.stats.score" [matTooltip]="layout.stats.score + '%'" matTooltipClass="tooltip"
       matTooltipPosition="right"></div>
 
