--- a/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.html
+++ b/src/app/hub/components/spider-chart-mobile/spider-chart-mobile.component.html
@@ -2,6 +2,7 @@
   <canvas
     id="canvas"
     baseChart
+    [options]="spiderChartOptions"
     [datasets]="spiderChartData"
     [labels]="spiderChartLabels"
     [type]="spiderChartType"
