--- a/src/app/public-documents/subcategory/subcategory.component.html
+++ b/src/app/public-documents/subcategory/subcategory.component.html
@@ -206,5 +206,5 @@
 <!-- mobile -->
 <div class="set-12" *ngIf="isDataAvailable && isMobile">
   <div class="public-document-mobile-subcategory-view" [document]="document" [category]="subcategory"></div>
-  <div class="public-document-mobile-fixed-tools" (topicAdded)="getTopicStatus($event)"></div>
+  <!-- <div class="public-document-mobile-fixed-tools" (topicAdded)="getTopicStatus($event)"></div> -->
 </div>
