--- a/src/app/components/add-document-topic-full/add-document-topic-full.component.html
+++ b/src/app/components/add-document-topic-full/add-document-topic-full.component.html
@@ -19,15 +19,6 @@
   <div class="set-12 dialog-body">
     <form [formGroup]="addTopicFormGroup" (submit)="onCreateTopic(addTopicFormGroup)">
       <mat-form-field appearance="outline">
-        <mat-label>Cobertura</mat-label>
-        <mat-select formControlName="coverage">
-          <mat-option *ngFor="let state of coverage" [value]="state">
-            <small>{{state?.name}}</small>
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline">
         <mat-label>Categoría</mat-label>
         <mat-select (selectionChange)="onLayoutSelected($event)" formControlName="layout">
           <mat-option *ngFor="let layout of layouts" [value]="layout">
@@ -38,9 +29,18 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Sub categoría</mat-label>
-        <mat-select formControlName="sublayout">
+        <mat-select (selectionChange)="onSubLayoutSelected($event)" formControlName="sublayout">
           <mat-option *ngFor="let layout of sublayouts" [value]="layout">
             <small>{{layout?.category?.name}}</small>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Cobertura</mat-label>
+        <mat-select (selectionChange)="onCoverageSelected($event)" formControlName="coverage">
+          <mat-option *ngFor="let state of coverage" [value]="state">
+            <small>{{state?.name}}</small>
           </mat-option>
         </mat-select>
       </mat-form-field>
