--- a/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.scss
+++ b/src/app/components/public-document-mobile-fixed-tools/public-document-mobile-fixed-tools.component.scss
@@ -1,5 +1,5 @@
 :host {
-  width: 100%;
+  // width: 100%;
   position: fixed;
   bottom: 20px;
   right: 20px;
@@ -23,7 +23,7 @@
     background: #306EFF;
     z-index: 17;
     border-radius: 100%;
-    margin-left: 90%;
+    // margin-left: 90%;
 
     mat-icon {
       color: #ffffff;
@@ -33,7 +33,7 @@
   button.tool {
     width: auto;
     height: 40px;
-    // background: greenyellow;
+    background: #71F5AD;
     z-index: 14;
     position: absolute;
     top: 10px;
@@ -41,30 +41,36 @@
     opacity: 0;
     transition: all .2s linear;
     padding: 0 10px;
-    border-radius: 5px;
+    border-radius: 100%;
+    overflow: hidden;
 
     mat-icon {
       font-size: 14pt;
+      color: #27623f;
     }
   }
 
   button.tool:nth-child(1) {
-    background: #FCDBC3;
-
-    mat-icon {
-      color: #E98282;
+    &.fixedpos {
+      top: -35px;
     }
+  }
 
+  button.tool:nth-child(2) {
     &.fixedpos {
       top: -80px;
     }
   }
 
-  button.tool:nth-child(2) {
-    background: #71F5AD;
-
+  button.tool:nth-child(3) {
     &.fixedpos {
-      top: -35px;
+      top: -125px;
+    }
+  }
+
+  button.tool:nth-child(4) {
+    &.fixedpos {
+      top: -170px;
     }
   }
 
