--- a/src/app/components/share-sheet/share-sheet.component.html
+++ b/src/app/components/share-sheet/share-sheet.component.html
@@ -7,7 +7,13 @@
 </div>
 
 <div class="set-12 sheet-media networks">
-  <button type="button" class="icon facebook-net"></button>
+  <button type="button" class="icon facebook-net">
+    <div class="fb-share-button" data-href="https://mexicolectivo.com/" data-layout="button_count" data-size="small">
+      <a target="_blank"
+        href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fmexicolectivo.com%2F&amp;src=sdkpreparse"
+        class="fb-xfbml-parse-ignore"></a>
+    </div>
+  </button>
   <button type="button" class="icon instagram-net"></button>
   <button type="button" class="icon whatsapp-net"></button>
   <button type="button" class="icon linkedin-net"></button>
