--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.html
@@ -1,8 +1,8 @@
-<div class="topic-card mt-1">
-    <div class="topic-header">
+<mat-card class="topic-card mt-1">
+    <mat-card-content class="topic-header">
         <div class="topic-title ">Tema 1</div>
-        <div class="topic-viewmore">Ver más</div>
-    </div>
+        <div class="topic-viewmore" (click)="openDialog()">Ver más</div>
+    </mat-card-content>
     <div class="topic-body mt-1">Ultima actualización 01/12/2022</div>
     <div class="topic-footer mt-2">
         <mat-icon class="topic-icons">favorite</mat-icon>
@@ -10,4 +10,4 @@
         <mat-icon class="topic-icons">share</mat-icon>
         <mat-icon class="topic-icons">report</mat-icon>
         <mat-icon class="topic-icons">forum</mat-icon></div>
-</div>
+    </mat-card>
