--- a/src/app/hub/components/search-input-mobile/search-input-mobile.component.scss
+++ b/src/app/hub/components/search-input-mobile/search-input-mobile.component.scss
@@ -1,6 +1,6 @@
 .input-wrapper {
     position: relative;
-    width: 328px;
+    width: 90%;
     border: 1px solid #ccc;
     background: #FFFFFF;
     border-radius: 5px;
