--- a/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
+++ b/src/app/hub/components/tabs-mobile/tabs-mobile.component.html
@@ -1,6 +1,5 @@
-<div >
- 
-  <mat-tab-group>
+<div>
+  <mat-tab-group animationDuration="0ms">
     <mat-tab label="Temas">
       <search-input-mobile></search-input-mobile>
       <card-topics-mobile></card-topics-mobile>
