--- a/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
+++ b/src/app/hub/components/card-topics-mobile/card-topics-mobile.component.scss
@@ -1,4 +1,7 @@
-.topic-card {
+:host{
+ 
+
+  .topic-card {
   padding: 10px;
   background: #ffffff;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.24);
@@ -7,30 +10,22 @@
   height: 110px;
 }
 
-.topic-header {
+.topic-header{
   display: flex;
 }
 
-.topic-title {
-  font-family: "Montserrat";
-  font-style: normal;
+.topic-title {  
   font-weight: 700;
   font-size: 16px;
-  line-height: 20px;
-  width: 232px;
-  height: 20px;
-  text-align: left;
+  width: 80%;
+  height: 20px; 
 }
 
 .topic-viewmore {
-  width: 59px;
+  width: 20%;
   height: 17px;
-  font-family: "Montserrat";
-  font-style: normal;
   font-weight: 600;
   font-size: 14px;
-  line-height: 17px;
-  /* identical to box height */
   text-decoration-line: underline;
 }
 
@@ -59,4 +54,5 @@
 
 .topic-footer {
   margin-bottom: 5px;
+}
 }
